--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://${POSTGRES_HOSTNAME}:${POSTGRES_PORT}/${POSTGRES_DB_NAME}
 spring.datasource.username=${POSTGRES_USERNAME}
-spring.datasource.password=${POSTGRES_PASS}
+spring.datasource.password=${POSTGRES_PASSWORD}
 
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=false
